# Intelligent-tictactoe-minimax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: deploy.yml  tests.yml
.streamlit/: config.toml
docs/: architecture.md  minimax_explanation.md
src/: __init__.py  gui.py  main.py
src/ai/: __init__.py  difficulty.py  minimax.py
src/game/: __init__.py  board.py  player.py  rules.py
src/tic_tac_toe/: __init__.py  board.py  game.py  gui.py  main.py  player.py
src/utils/: __init__.py  display.py  helpers.py
tests/: test_ai.py  test_game.py  test_tic_tac_toe.py
