[project]
name = "tic-tac-toe"
version = "1.0.0"
description = "Tic Tac Toe game with intelligent AI opponent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AI Assistant"}]
keywords = ["game", "tic-tac-toe", "ai", "minimax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tic-tac-toe = "tic_tac_toe.main:main"
tic-tac-toe-gui = "tic_tac_toe.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"